--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,26 @@
 body {
     margin: 0 auto;
     width: 990px;
-    background: lightsalmon;
+    background: url("https://images.unsplash.com/photo-1519751138087-5bf79df62d5b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc27ce5f453203e4b82d163c181339ca&auto=format&fit=crop&w=1500&q=80");
+    background-size: cover;
+}
+
+li {
+    list-style-type: none;
+}
+
+.all-posts, #single-post, #all-users {
+    border: 5px solid black;
+    background: url("https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e61473e05eab5640e6bc4863b4aa40e1&auto=format&fit=crop&w=1534&q=80");
+    margin: 10px;
+    padding: 10px;
+}
+
+.text-area {
+    width: 400px;
+    height: 200px;
+}
+
+#logged-in {
+    color: rgb(3, 37, 70);
 }
