--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <!--<h4><% if session[:username] %></h4>
-        <h4 id="logged-in"> Current user: <%= current_user.username%> </h4>
+    <h4><% if session[:user_id] %></h4>
+        <h3 id="logged-in"> <%= User.find(session[:user_id]).username %>, you are currently signed in </h3>
         <h4> <% else %></h4>
         <h4 id="logged-out"> Please login </h4>
-      <% end %>-->
+      <% end %>
     <a href="/">Home</a> <a href="/posts">Posts</a> <a href="/signin">Signin</a> <a href="/signout">Signout</a>
-  
+  </br>
     <%= flash[:notice] if flash[:notice] %>
     <%= yield %>
   </body>
