--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,18 @@
 <%# home page %>
 <h1>The Blog</h1>
 
-<h3>All users:</h3>
-<div id='users-index'>
-    <% @users.each do |user| %>
-    <li>
-    <%= link_to(user.username, user) %>
-    </li>
-  <% end %>
-
+<div id="all-users">
+  <h3>All users:</h3>
+      <% @users.each do |user| %>
+      <div id='users-index'>
+        <li>
+          <h3><%= link_to(user.username, user) %></h3>
+        </li>
+     </div>
+    <% end %>
+</div>
   <p>
     <%= link_to('Create User', new_user_path)%>
   </p>
 
-<%#<%= image_tag "gizmo.jpg" %>
+<%#= image_tag "gizmo.jpg" %>
