--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,13 +5,13 @@
 
 <h2>Post -  <%= @post.body %> </h2>
 
-<% if @user = @current_user %>
+<%#<% if @user = @current_user %>
 
 <%= link_to("Edit Post", edit_post_path(@post)) %>
 <%= link_to("Delete Post", @post, method: 'delete') %>
 
-<% else %>
-<%= "You don't have access to delete this post" %>
+<%#<% else %>
+<%#<%= "You don't have access to delete this post" %>
 
-<% end %>
+<%#<% end %>
 </div>
