--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,24 @@
         <h4> <% else %></h4>
         <h4 id="logged-out"> Please login </h4>
       <% end %>
-    <a href="/">Home</a> <a href="/posts">Posts</a> <a href="/signin">Signin</a> <a href="/signout">Signout</a>
+      <nav class="navbar">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/posts">Posts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signin">Sign In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signout">Sign Out</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
   </br>
     <%= flash[:notice] if flash[:notice] %>
     <%= yield %>
