--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,13 +5,10 @@
 
 <h2>Post -  <%= @post.body %> </h2>
 
-<%#<% if @user = @current_user %>
+<h3>Comment - <%= @post.comments %> </h3>
 
 <%= link_to("Edit Post", edit_post_path(@post)) %>
 <%= link_to("Delete Post", @post, method: 'delete') %>
+<%= link_to("Add Comment", new_comment_path(post_id: @post.id)) %>
 
-<%#<% else %>
-<%#<%= "You don't have access to delete this post" %>
-
-<%#<% end %>
 </div>
