--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,11 @@
 
 <h2>Post -  <%= @post.body %> </h2>
 
-<h3>Comment - <%= @post.user.comments %> </h3>
+<h3>Comment - <%= @post.comments.reverse.each do |c| %> </h3> 
+
+<%= c.body %>
+
+<% end %>
 
 <%= link_to("Edit Post", edit_post_path(@post)) %>
 <%= link_to("Delete Post", @post, method: 'delete') %>
