fixed syntax issues with comments

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,7 +9,7 @@ li {
     list-style-type: none;
 }
 
-.all-posts, #single-post, #all-users {
+.all-posts, #all-users {
     border: 5px solid black;
     background: url("https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e61473e05eab5640e6bc4863b4aa40e1&auto=format&fit=crop&w=1534&q=80");
     margin: 10px;
