--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0 auto;
+    font-family: 'Noto Serif KR', sans-serif;
     width: 990px;
     background: url("https://images.unsplash.com/photo-1519751138087-5bf79df62d5b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc27ce5f453203e4b82d163c181339ca&auto=format&fit=crop&w=1500&q=80");
     background-size: cover;
