--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
 
   <body>
@@ -15,24 +17,13 @@
         <h4> <% else %></h4>
         <h4 id="logged-out"> Please login </h4>
       <% end %>
-      <nav class="navbar">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/posts">Posts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/signin">Sign In</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/signout">Sign Out</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+   
+    <nav class="nav">
+  <a class="nav-link active" href="/">Home</a>
+  <a class="nav-link" href="/posts">Posts</a>
+  <a class="nav-link" href="/signin">Sign In</a>
+  <a class="nav-link" href="/signout">Sign Out</a>
+</nav>
   </br>
     <%= flash[:notice] if flash[:notice] %>
     <%= yield %>
