--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,17 +1,27 @@
 body {
-    margin: 0 auto;
     font-family: 'Noto Serif KR', sans-serif;
+    margin-left: 15% !important;
+    margin-right: 20% !important;
+    display: block;
     width: 990px;
     background: url("https://images.unsplash.com/photo-1519751138087-5bf79df62d5b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc27ce5f453203e4b82d163c181339ca&auto=format&fit=crop&w=1500&q=80");
     background-size: cover;
 }
 
-li {
+li, .nav-link {
     list-style-type: none;
+    text-decoration: none;
+    color: black;
 }
 
-.all-posts, #all-users {
-    border: 5px solid black;
+a {
+    color: rgb(180, 51, 51) !important;
+    background: blue;
+}
+
+.all-posts, #all-users, #single-post, #single-comment, #user-form {
+    border: 5px dashed black;
+    border-radius: 5px;
     background: url("https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e61473e05eab5640e6bc4863b4aa40e1&auto=format&fit=crop&w=1534&q=80");
     margin: 10px;
     padding: 10px;
