--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,25 +4,48 @@ body {
     margin-right: 20% !important;
     display: block;
     width: 990px;
-    background: url("https://images.unsplash.com/photo-1519751138087-5bf79df62d5b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc27ce5f453203e4b82d163c181339ca&auto=format&fit=crop&w=1500&q=80");
+    background: url("http://disruptivedog.com/wp-content/uploads/2017/08/03_DribbbleDogIllustrations_Frenchies.png");
     background-size: cover;
+}
+
+#title {
+    text-align: center;
+    border: 3px solid black;
+    background: rgb(236, 236, 5);
+    margin-left: 25%;
+    margin-right: 20%;
+    height: auto;
+    width: 500px;
+    opacity: 0.8px;
+}
+
+#login-message, nav {
+    border: 2px solid black;
+    background: rgb(18, 230, 11);
+    height: auto;
+    width: 500px;
+    padding: 10px;
+    margin-top: 10px;
+    margin-left: 25%;
+    text-align: center;
 }
 
 li, .nav-link {
     list-style-type: none;
     text-decoration: none;
-    color: black;
+    color: rgb(2, 2, 2);
 }
 
 a {
-    color: rgb(180, 51, 51) !important;
-    background: blue;
+    color: rgb(95, 6, 6) !important;
+    background: rgb(113, 113, 156);
 }
 
 .all-posts, #all-users, #single-post, #single-comment, #user-form {
     border: 5px dashed black;
     border-radius: 5px;
-    background: url("https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e61473e05eab5640e6bc4863b4aa40e1&auto=format&fit=crop&w=1534&q=80");
+    background: rgb(236, 5, 132);
+    opacity: 0.9;
     margin: 10px;
     padding: 10px;
 }
