--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,9 @@
 <%# create posts %>
-<%= form_for @post do |f| %>
-    <%= f.label :body %>
-    <%= f.text_area :body, class: "text-area" %>
-    <%= f.submit %>
-<% end %>
+<div id="post-form">
+    <%= form_for @post do |f| %>
+        <%= f.label :body %>
+        <%= f.text_area :body, class: "text-area" %>
+        </br>
+        <%= f.submit %>
+    <% end %>
+</div>
