--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,7 +10,7 @@ body {
 
 #title {
     text-align: center;
-    border: 3px solid black;
+    border: 10px solid black;
     background: rgb(236, 236, 5);
     margin-left: 25%;
     margin-right: 20%;
@@ -19,8 +19,12 @@ body {
     opacity: 0.8px;
 }
 
-#login-message, nav {
-    border: 2px solid black;
+.username {
+    margin-right: 13%;
+}
+
+#sign-in,#comment-form, #post-form, #user-show, #blog-posts, #login-message, nav {
+    border: 7px solid black;
     background: rgb(18, 230, 11);
     height: auto;
     width: 500px;
@@ -28,6 +32,10 @@ body {
     margin-top: 10px;
     margin-left: 25%;
     text-align: center;
+}
+
+#blog-posts, #post-form, #comment-form {
+    background: orange;
 }
 
 li, .nav-link {
@@ -42,7 +50,7 @@ a {
 }
 
 .all-posts, #all-users, #single-post, #single-comment, #user-form {
-    border: 5px dashed black;
+    border: 5px solid black;
     border-radius: 5px;
     background: rgb(236, 5, 132);
     opacity: 0.9;
@@ -51,8 +59,8 @@ a {
 }
 
 .text-area {
-    width: 400px;
-    height: 200px;
+    width: 300px;
+    height: 100px;
 }
 
 #logged-in {
