--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <%# show all users %>
 
-    <%= @user.username %>
+<div id="user-show">
+    <h2>Username - <%= @user.username %> </h2>
 
     <%= link_to("Edit User", edit_user_path(@user)) %>
+    </br>
     <%= link_to("Delete User", @user, method: 'delete') %>
+</div>
