--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/signout">Sign Out</a>
         </nav>
       </br>
-      <%= flash[:notice] if flash[:notice] %>
+      <div id="flash-notice"><%= flash[:notice] if flash[:notice] %></div>
       <%= yield %>
   </body>
 </html>
