--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%# home page %>
 <div id="title">
-  <h1>DoggA-BloggA</h1>
+  <h1>Doggie-Bloggie ®</h1>
     <h4>Where dogs go to gossip about their owners</h4>
       <p>
         <%= link_to('Create User', new_user_path)%>
