edit and delete comments now works

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,7 +23,7 @@ body {
     margin-right: 13%;
 }
 
-#sign-in,#comment-form, #post-form, #user-show, #blog-posts, #login-message, nav {
+#sign-in,#comment-form, #edit-comment-form, #post-form, #user-show, #blog-posts, #login-message, nav {
     border: 7px solid black;
     background: rgb(18, 230, 11);
     height: auto;
