Changed Gemfile for Heroku

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,8 +1,1 @@
-<div id="edit-comment-form">
-    <%= form_for @comment do |f| %>
-        <%= f.label :body %>
-        <%= f.text_area :body, class: "text-area" %>
-        <%= f.hidden_field :post_id %>
-        <%= f.submit %>
-    <% end %>
-</div>
+<%= render "comment_form" %>
