--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,2 @@
 <%# edit posts %>
-<div id="post-form">
-    <%= form_for @post do |f| %>
-        <%= f.label :body %>
-        <%= f.text_field :body %>
-        </br>
-        <%= f.submit %>
-    <% end %>
-</div>
+<%= render "post_form" %>
