--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,2 @@
-<%# create a new user %>
-<div id="user-form">
-    <%= form_for @user do |f| %>
-        <%= f.label :username %>
-        <%= f.text_field :username %>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-        <%= f.submit %>
-    <% end %>
-</div>
+<%# new user %>
+<%= render "login_form" %>
