--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,11 @@
 
 <div id="user-show">
     <h2>Username - <%= @user.username %> </h2>
-
+    
+    <% if current_user && current_user.id == @user %>
     <%= link_to("Edit User", edit_user_path(@user)) %>
     </br>
     <%= link_to("Delete User", @user, method: 'delete') %>
+    <% end %>
+    
 </div>
