--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,10 +4,12 @@
         <h1><strong> Post - </strong> <%= @post.body %> </h1>
         <h3>User - <strong><%= @post.user.username %></strong> </h3>
 
+        <% if current_user && current_user.id == @post.user_id %>
         <%= link_to("Edit Post", edit_post_path(@post)) %>
         </br>
         <%= link_to("Delete Post", @post, method: 'delete') %>
         </br>
+        <% end %>
         <%= link_to("Add Comment", new_comment_path(post_id: @post.id)) %>
 </div>
 
@@ -20,9 +22,12 @@
                 <h6><%= c.body %> </h6>
 
                 </br>
+
+                <% if current_user && current_user.id == c.user_id %>
                 <%= link_to("Edit Comment", edit_comment_path(c.id)) %>
                 </br>
                 <%= link_to("Delete Comment", comment_path(c.id), method: :delete) %>
+                <% end %>
             </div>
         <% end %>
     </div>
