--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,10 +1,10 @@
 body {
     margin-left: 15% !important;
     margin-right: 20% !important;
-    display: block;
     width: 990px;
     background: url("https://res.cloudinary.com/angelrodriguez/image/upload/v1537011402/doggies.jpg");
     background-size: cover;
+    cursor: pointer;
 }
 
 #title {
@@ -35,6 +35,10 @@ body {
     box-shadow: 4px 5px 3px rgb(128, 126, 126);
 }
 
+#sign-in {
+    text-align: left !important;
+}
+
 #flash-notice {
     background: rgb(202, 122, 212);
     font-family: 'Noto Serif KR', sans-serif;
@@ -56,6 +60,23 @@ li, .nav-link {
     text-decoration: none;
     margin: 5px;
     color: rgb(2, 2, 2);
+}
+
+input {
+    display: block;
+    // margin-left: 30% !important;
+    border-radius: 5px;
+    width: 200px;
+    height: 30px;
+}
+
+button {
+    background-color: blue;
+    width: 150px;
+    height: 50px;
+    color: white;
+    border: none;
+    border-radius: 5px !important;
 }
 
 .nav-link {
@@ -99,3 +120,13 @@ a {
 .navbar {
     display: block;
 }
+
+@media screen and (min-width: 400px) { 
+    .all-posts, #all-users, #single-post, #user-form  {
+        width: 900px; 
+    }
+
+    #single-comment {
+        width: 500px;
+    }
+ }
