--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -121,7 +121,11 @@ a {
     display: block;
 }
 
-@media screen and (min-width: 400px) { 
+@media screen and (min-width: 400px) {
+    body {
+        overflow-x: hidden !important;
+    } 
+    
     .all-posts, #all-users, #single-post, #user-form  {
         width: 900px; 
     }
