--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,17 @@
 <%# show all users %>
 
 <div id="user-show">
-    <h2>Username - <%= @user.username %> </h2> 
+    <h2>Username - <%= @user.username %> </h2>
+    <hr>
+        <% @user.posts.reverse.each do |post| %>
+        <p>Blog Post: <%= link_to(post.body, post) %> </p>
+        <p>By: <%= post.user.username %>  </p>
+    <hr>
+      <% end %>
     <% if current_user && current_user.id == @user.id %>
     <%= link_to("Edit User", edit_user_path(@user)) %>
     </br>
     <%= link_to("Delete User", @user, method: 'delete') %>
-    <% end %>   
+    <% end %>
+    
 </div>
