added edit/delete user and posts path to home directory

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
     <% @posts.reverse.each do |post| %>
     <li class="all-posts">
     <p>Click on post to view or add comments</p>
-    <p>Created: <%= post.user.created_at %>
+    <p>Created: <%= post.user.created_at %></p>
     <p>Blog Post: <%= link_to(post.body, post) %> </p>
     <p>By: <%= post.user.username %>  </p>
     
