--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,9 +1,13 @@
 <%# template for comment creation and edit %>
 <div id="comment-form">
     <%= form_for @comment do |f| %>
-        <%= f.label :body %>
+        <h3><%= f.label :Add_comment %></h3>
+        <hr>
         <%= f.text_area :body, class: "text-area" %>
         <%= f.hidden_field :post_id %>
-        <%= f.submit %>
+        <br>
+        <button>
+            <h2>Submit <%= f.submit %> </h2>
+        </button>
     <% end %>
 </div>
