--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,12 +23,8 @@ body {
     text-align: center;
     border: 10px solid black;
     background: rgb(236, 236, 5);
-    margin-left: 25%;
-    margin-right: 20%;
     height: auto;
-    width: 500px;
-    opacity: 0.8px;
-    box-shadow: 4px 5px 3px rgb(128, 126, 126);
+    // box-shadow: 4px 5px 3px 10px rgb(3, 3, 3);
 }
 
 .username {
@@ -122,7 +118,7 @@ a {
     background: rgb(236, 5, 132);
     margin: 10px;
     padding: 10px;
-    box-shadow: 4px 5px 3px rgb(128, 126, 126);
+    // box-shadow: 4px 5px 3px rgb(128, 126, 126);
 }
 
 #single-comment {
@@ -153,10 +149,6 @@ a {
     body {
         overflow-x: hidden !important;
     } 
-    
-    .all-posts, #all-users, #single-post, #user-form  {
-        width: 900px; 
-    }
 
     #single-comment {
         width: 500px;
