--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
 <div id="blog-posts">
   <h1>Blog Posts</h1>
 
-    <p>
-      <%= link_to('Create Post', new_post_path)%>
-    </p>
+  <% if session[:user_id]%>
+    <p><%= link_to('Create Post', new_post_path)%></p>
+    <% else %>
+    <p>Please login to post something</p>
+  <% end %>
 </div>
   <div id='blogs-index'>
     <% @posts.reverse.each do |post| %>
